--- a/source/styles/options.scss
+++ b/source/styles/options.scss
@@ -1,10 +1,3 @@
-@import "base/fonts";
-@import "base/reset";
-@import "base/variables";
-
-@import "~webext-base-css/webext-base.css";
-
-body {
-  color: $black;
-  background-color: $greyWhite;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
